--- a/agendify/src/app/main/services/index.module.scss
+++ b/agendify/src/app/main/services/index.module.scss
@@ -4,7 +4,7 @@
     width: 100%;
     padding: 3vw;
     gap: 20px;
-    height: 100%;
+    height: calc(100% - 200px);
 }
 
 .services_container {
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    height: 100%;
+    min-height: 100%
 }
 
 .main_scroll {
